--- a/projects/snek.html
+++ b/projects/snek.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snek</title>
 </head>
-<body>
-    <canvas id="snek" width="800" height="600"></canvas>
+<body style="margin: 0; padding: 0; background-color: #ECE4D8;">
+    <center>
+        <canvas id="snek" width="800" height="600"></canvas>
+    </center>    
     <script src="scripts/snek.js"></script>
 </body>
 </html>
