--- a/projects/snek.html
+++ b/projects/snek.html
@@ -8,7 +8,7 @@
 </head>
 <body style="margin: 0; padding: 0; background-color: #ECE4D8;">
     <center>
-        <canvas id="snek" width="800" height="600"></canvas>
+        <canvas id="snek" width="800" height="600" style="display: block; border-radius: 25px"></canvas>
     </center>    
     <script src="scripts/snek.js"></script>
 </body>
