--- a/projects/snek.html
+++ b/projects/snek.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snek</title>
 </head>
-<body style="margin: 0; padding: 0; background-color: #ECE4D8;">
+<body style="margin: 25px; padding: 0; background-color: #ECE4D8;">
     <center>
         <canvas id="snek" width="800" height="600" style="display: block; border-radius: 25px"></canvas>
     </center>    
